--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1",
+    "sortablejs": "^1.15.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
